ansible-deploy-workload/roles/deploy-jenkins-workload/templates/jjb-template.yml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: jjb-template
objects:
- apiVersion: v1
  data:
    jenkins_jobs.ini: |
      [jenkins]
      user=${JENKINS_USER}
      password=${JENKINS_PASSWORD}
      url=${JENKINS_URL}
      query_plugins_info=False
  kind: ConfigMap
  metadata:
    creationTimestamp: null
    name: ${JJB_CONFIG_MAP_NAME}
- kind: "DeploymentConfig"
  apiVersion: "v1"
  metadata:
    name: ${JJB_DC_NAME}
  spec:
    template:
      metadata:
        labels:
          name: "jjb"
      spec:
        containers:
          - name: "jjb"
            image: "docker.io/hongkailiu/jjb:2.0.6"
            env:
              - name: PYTHONHTTPSVERIFY
                value: "0"
              - name: XDG_CACHE_HOME
                value: "/data"
            volumeMounts:
              - name: config-volume
                mountPath: /etc/jenkins_jobs/
              - name: "data-vol"
                mountPath: "/data"
        volumes:
          - name: config-volume
            configMap:
              name: ${JJB_CONFIG_MAP_NAME}
          - name: "data-vol"
            emptyDir: {}
    triggers:
      - type: "ConfigChange"
    replicas: 1
parameters:
- description: Jenkins User
  displayName: Jenkins User
  name: JENKINS_USER
  required: true
  value: admin
- description: Jenkins Password
  displayName: Jenkins Password
  name: JENKINS_PASSWORD
  required: true
  value: password
- description: Jenkins URL, eg, https://jenkins-ttt.apps.0327-nbn.qe.rhcloud.com
  displayName: Jenkins URL
  name: JENKINS_URL
  required: true
- description: Name of JJB Config Map
  displayName: JJB Config Map
  name: JJB_CONFIG_MAP_NAME
  reguired: true
- description: Name of JJB Deployment Config
  displayName: JJB Deployment Config
  name: JJB_DC_NAME
  required: true
